--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         go-version: [ '1.18', '1.19', '1.20' ]
+      fail-fast: false
 
     steps:
     - name: Checkout code
@@ -28,7 +29,7 @@ jobs:
       run: go mod download
 
     - name: Run tests
-      run: go test -v ./...
+      run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
     - name: Build
       run: go build -v ./cmd/mgu
